fixed responsivness on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  height: 90vh;
 }
 
 input[type="text"] {
@@ -89,6 +91,9 @@ option {
   align-items: center;
   align-content: center;
   width: 100%;
+}
+.budget{
+  font-size: 25px;
 }
 .expenses {
   text-align: center;
@@ -253,14 +258,17 @@ option {
 @media screen and (min-width: 200px) and (max-width: 1200px) {
   html, body{
     height: 95%;
+
   }
   .main {
     background-color: white;
     border-radius: 20px;
     padding: 10px;
     height: 100%;
-    max-height: 100%;
-    display: block;
+    max-height: 100%;;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .info {
     width: 100%;
@@ -269,9 +277,10 @@ option {
   }
   .total{
     width: 100%;
-    padding: 0px;
+    padding: 5px;
   }
   .title{
+    text-align: center;
     padding: 10px;
     margin: 0px;
   }
@@ -299,6 +308,7 @@ option {
     padding: 2px;
   }
   .inputs {
+    justify-self: bottom;
     padding: 10px;
   }
   .submit {
